pyproject = """[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-lesion-ml"
version = "1.0.0"
description = "Reproducible MRI lesion pipeline with small-N classification"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Yelyzaveta Snihirova" }]
dependencies = [
"numpy>=1.24",
"pandas>=2.0",
"scikit-learn>=1.3",
"imbalanced-learn>=0.11",
"matplotlib>=3.7",
"seaborn>=0.13",
"nibabel>=5.0",
"scikit-image>=0.22",
"pyyaml>=6.0",
"scipy>=1.10"
]

[project.scripts]
ms-lesion-ml = "ms_lesion_ml.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
"""
(root / "pyproject.toml").write_text(pyproject, encoding="utf-8")
